# ovr-program

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
anchor/: Anchor.toml  package-lock.json  package.json  readme.md
anchor/programs/ovr-program/: Cargo.toml
anchor/programs/ovr-program/src/: constants.rs  errors.rs  known_addresses.rs  lib.rs  state-schema.json  state.rs  utils.rs
anchor/programs/ovr-program/src/processors/: aovr_inflation_run.rs  cancel_stake_withdrawal.rs  initialise_aovr.rs  initialise_staking.rs  mint_aovr.rs  mod.rs  rebalance_staking_pool.rs  register_staking_pool.rs  request_stake_withdrawal.rs  stake.rs  test_update_inflation_run.rs  withdraw_stake.rs
anchor/tests/: base_test.ts  constants.ts
anchor/tests/processors/: 000_initialise_aovr.test.ts  000_initialise_aovr.testx.ts  010_mint_aovr.test.ts  020_initialise_staking.test.ts  025_inflation_run_no_stakes.test.ts  030_register_staking_pool.testX.ts  035_inflation_run_1.ts  040_stake.testX.ts  1_initialise_staking.ts  2_register_staking_pool.ts
anchor/tests/test-keys/: allovr-aovr-treasury.json  allovr-mint.json  allovr-state.json  test-keys.ts
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
src/processors/: accept_artwork_sale.rs  cancel_artwork_sale.rs  create_artwork.rs  init_artwork_sale.rs  initialise.rs  mint_allovr.rs  mod.rs  register_artist.rs  trigger_inflation.rs  update_artist.rs
tests/: utils_tests.rs
