[package]
name = "ovr-program"
version = "0.0.1"
description = "The ALLOVR smart contract"
authors = ["Bosko Kovacevic (bosko@allovr.io)"]
repository = "https://github.com/ALLOVRStudios/ovr-program"
license = "Apache-2.0"
homepage = "https://www.allovr.io"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
solana-program = "~1.9.5"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
as-slice = "0.2.1"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "~1.9.5"
solana-sdk = "~1.9.5"

[lib]
name = "allovr_token"
crate-type = ["cdylib", "lib"]
