[package]
name = "ovr-program"
version = "0.0.2"
description = "The ALLOVR smart contract"
authors = ["Bosko Kovacevic (bosko@allovr.io)"]
repository = "https://github.com/ALLOVRStudios/ovr-program"
license = "Apache-2.0"
homepage = "https://www.allovr.io"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
solana-program = "1.10.15"
arrayref = "0.3.6"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.5.7"
thiserror = "1.0.31"
as-slice = "0.2.1"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
mpl-token-metadata = {version = "1.3.1", features = ["no-entrypoint"]}


[dev-dependencies]
solana-program-test = "1.10.15"
solana-sdk = "1.10.15"

[lib]
name = "ovr_program"
crate-type = ["cdylib", "lib"]
